# aof25

./: README.md
day01/: README.md  main.py  refsol.py
day01/src/: day01.ml  day01_design.ml  day01_parser.ml  dune  input_value.ml  input_value.mli  left_or_right.ml  left_or_right.mli
day01/test/: dune  test_day01.ml
day03/: README.md  main.py
day03/src/: day03.ml  day03_design.ml  day03_design.mli  day03_parser.ml  dune
day03/test/: dune  test_day03.ml
day05/: README.md  part1.py  part2.py
day05/src/: day05.ml  day05_design.ml  day05_design.mli  day05_parser.ml  day05_parser.mli  dune
day05/test/: dune  test_day05.ml
day07/: README.md  main.py  tmp.ml
day07/src/: day07.ml  day07.mli  day07_design.ml  day07_parser.ml  dune
day07/test/: dune  test_day07.ml
day09/: part1.py
day11/: part1.py
infra/src/: build_ulx3s.ml  control.ml  control_codes_protocol.ml  control_codes_protocol.mli  dune  solutions.ml  solutions.mli  test_harness.ml  test_harness.mli  uart.ml  uart.mli  ulx3s_top.ml  ulx3s_top.mli  zynq_top.ml  zynq_top.mli
inputs/: .gitignore  dune  embed.sh  inputs.ml  inputs.mli
kernel/src/: clock_freq.ml  clock_freq.mli  design.ml  design.mli  design_config.ml  design_config.mli  design_intf.ml  dune  parser.ml  parser_intf.ml  solution.ml  solution_intf.ml
lib/src/: ascii_integer_parser.ml  ascii_integer_parser.mli  bcd.ml  bcd.mli  bcd_intf.ml  bcd_utils.ml  bcd_utils.mli  dune  fsm_utils.ml  fsm_utils.mli  numeric_shifter.ml  numeric_shifter.mli  numeric_shifter_intf.ml  parser_utils.ml  parser_utils.mli  print_decimal_outputs.ml  (+1 more)
(+5 files in other folders)
