(library
 (name advent_of_fpga_inputs_lib)
 (libraries async base64 core core_unix re)
 (inline_tests)
 (preprocessor_deps embedded.bin)
 (preprocess
  (pps ppx_jane ppx_embed_file)))

(rule
 (target embedded.bin)
 (deps
  (file embed.sh)
  (glob_files %{project_root}/inputs/*.txt)
  (glob_files %{project_root}/inputs/*.in)
  (glob_files %{project_root}/examples_for_testing/inputs/*.txt))
 (action
  (chdir
   %{project_root}/inputs
   (run sh -c "./embed.sh > %{target}"))))
